<resources>
    <string name="app_name">Popular Movies (part1)</string>
    <string name="no_internet_connect">No Internet Connection</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="action_sort">Sort</string>
    <string name="sort_by_popularity">By Popularity</string>
    <string name="sort_by_top_rated">By Top Rated</string>
    <string name="movie_poster_big">Big Movie Poster</string>
    <string name="movie_poster_small">Small Movie Poster</string>
</resources>
